--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-html-replace": "^1.6.1",
     "gulp-load-plugins": "^1.2.4",
     "gulp-plumber": "^1.1.0",
+    "jquery": "^3.1.0",
     "rollup": "^0.34.0",
     "rollup-plugin-node-resolve": "^1.7.1",
     "rollup-plugin-typescript": "^0.7.6",
