--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Visualizer for Perceptron",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepublish": "gulp build",
+    "test": "gulp test --chrome"
   },
   "keywords": [
     "perceptron",
@@ -17,23 +18,44 @@
   "license": "MIT",
   "dependencies": {
     "@mattmazzola/perceptron": "^0.2.0",
-    "d3": "^4.1.0",
     "d3-array": "^1.0.0",
-    "d3-axis": "^1.0.0"
-  },
-  "devDependencies": {
+    "d3-axis": "^1.0.0",
     "d3-drag": "^1.0.0",
     "d3-scale": "^1.0.1",
-    "d3-selection": "^1.0.0",
+    "d3-selection": "^1.0.0"
+  },
+  "devDependencies": {
+    "del": "^2.2.1",
     "gulp": "^3.9.1",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-header": "^1.8.7",
     "gulp-help": "^1.6.1",
     "gulp-html-replace": "^1.6.1",
     "gulp-load-plugins": "^1.2.4",
     "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-typedoc": "^2.0.0",
+    "gulp-uglify": "^1.5.4",
+    "jasmine": "^2.4.1",
+    "jasmine-core": "^2.4.1",
     "jquery": "^3.1.0",
+    "karma": "^1.1.1",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.1.0",
+    "karma-jasmine": "^1.0.2",
+    "moment": "^2.14.1",
+    "phantomjs-prebuilt": "^2.1.7",
     "rollup": "^0.34.0",
     "rollup-plugin-node-resolve": "^1.7.1",
     "rollup-plugin-typescript": "^0.7.6",
-    "run-sequence": "^1.2.2"
+    "run-sequence": "^1.2.2",
+    "ts-loader": "^0.8.2",
+    "typedoc": "^0.4.4",
+    "webpack": "^1.13.1",
+    "webpack-stream": "^3.2.0",
+    "yargs": "^4.8.1"
+  },
+  "publishConfig": {
+    "tag": "beta"
   }
 }
