Refactor chart to use more centralized update method.
Remove hard-coding of stroke and stroke width since it can be specified in CSS.
Untrack /demo folder since it's contents is generated by gulp task
Change to scoped package.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "perceptron-visualizer",
+  "name": "@mattmazzola/perceptron-visualizer",
   "version": "0.2.0",
   "description": "Visualizer for Perceptron",
   "main": "index.js",
