--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@mattmazzola/perceptron-visualizer",
   "version": "0.2.0",
-  "description": "Visualizer for Perceptron",
-  "main": "index.js",
+  "description": "Visualizer for Perceptron written using D3v4",
+  "main": "dist/perceptron-visualizer.js",
   "scripts": {
     "prepublish": "gulp build",
     "test": "gulp test --chrome"
@@ -17,7 +17,6 @@
   "author": "Matt Mazzola",
   "license": "MIT",
   "dependencies": {
-    "@mattmazzola/perceptron": "^0.2.0",
     "d3-array": "^1.0.0",
     "d3-axis": "^1.0.0",
     "d3-drag": "^1.0.0",
