--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Visualizer for Perceptron written using D3v4",
   "main": "dist/perceptron-visualizer.js",
   "scripts": {
+    "postinstall": "typings install",
     "prepublish": "gulp build",
     "test": "gulp test --chrome"
   },
@@ -24,6 +25,7 @@
     "d3-selection": "^1.0.0"
   },
   "devDependencies": {
+    "d3-brush": "^1.0.2",
     "del": "^2.2.1",
     "gulp": "^3.9.1",
     "gulp-gh-pages": "^0.5.4",
@@ -50,6 +52,8 @@
     "run-sequence": "^1.2.2",
     "ts-loader": "^0.8.2",
     "typedoc": "^0.4.4",
+    "typescript": "^1.8.10",
+    "typings": "^1.3.2",
     "webpack": "^1.13.1",
     "webpack-stream": "^3.2.0",
     "yargs": "^4.8.1"
