--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "postinstall": "typings install",
     "prepublish": "gulp build",
+    "start": "http-server",
     "test": "gulp test --chrome"
   },
   "keywords": [
@@ -37,6 +38,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-typedoc": "^2.0.0",
     "gulp-uglify": "^1.5.4",
+    "http-server": "^0.9.0",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
     "jquery": "^3.1.0",
